--- a/azsh-linux-agent/azsh-linux-agent-secret.template.yaml
+++ b/azsh-linux-agent/azsh-linux-agent-secret.template.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 data:
-  AZP_POOL: KubernetesPoolLinux
+  AZP_POOL: __POOL_NAME__
   AZP_TOKEN: __PAT_TOKEN__
-  AZP_URL: https://dev.azure.com/cad4devops
+  AZP_URL: __AZURE_DEVOPS_URL__
 kind: Secret
 metadata:
   name: azdevops
-  namespace: az-devops
+  namespace: __NAMESPACE__
 type: Opaque
