can pull image but now getting issue perhaps with environment vars starting container

--- a/azsh-linux-agent/azsh-linux-agent-deployment.template.yaml
+++ b/azsh-linux-agent/azsh-linux-agent-deployment.template.yaml
@@ -37,6 +37,8 @@ spec:
           volumeMounts:
             - mountPath: /var/run/docker.sock
               name: docker-volume
+      imagePullSecrets:
+        - name: regsecret
       volumes:
         - name: docker-volume
           hostPath:
