let us test this windows agent

--- a/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
+++ b/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
@@ -1,21 +1,21 @@
 trigger: none
 
-pool: 
-  name: agent-on-kubernetes
-  vmImage: azsh-windows-768bd8bdf8-2ng48
+pool:
+  name: KubernetesPoolWindows # agent-on-kubernetes
+  vmImage: azsh-windows-6c599c9f48-n2hxt # Windows agent pool specified!!!
 
 stages:
-- stage: Deploy
-  jobs:
-  - deployment: agentSetup
-    environment: test
-    displayName: 'Agent Setup'
-    strategy:
-        runOnce:
-          deploy:
-            steps:
-            #Hello World From CMDLINE
-            - template: ../scripts/kubernetes/windows/hello-world.yaml
-            
-            #Print Hostname from CMDLINE
-            - template: ../scripts/kubernetes/windows/windows-hostname.yaml
+  - stage: Deploy
+    jobs:
+      - deployment: agentSetup
+        environment: ADO_test_windows
+        displayName: "Agent Setup"
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                #Hello World From CMDLINE
+                - template: ../scripts/kubernetes/windows/hello-world.yaml
+
+                #Print Hostname from CMDLINE
+                - template: ../scripts/kubernetes/windows/windows-hostname.yaml
