--- a/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
+++ b/.azuredevops/pipelines/sample-run-on-windows-agent-k8s.yaml
@@ -2,7 +2,9 @@ trigger: none
 
 pool:
   name: KubernetesPoolWindows # agent-on-kubernetes
-  vmImage: azsh-windows-6c599c9f48-n2hxt # Windows agent pool specified!!!
+  #vmImage: azsh-windows-6c599c9f48-n2hxt # Windows agent pool specified!!!
+  demands:
+    - Agent.Name -equals azsh-windows-6c599c9f48-n2hxt
 
 stages:
   - stage: Deploy
