--- a/azsh-linux-agent/Dockerfile.linux-sh-agent-docker
+++ b/azsh-linux-agent/Dockerfile.linux-sh-agent-docker
@@ -1,25 +1,32 @@
 FROM ubuntu:24.04
-ENV TARGETARCH="linux-x64"
+
+# Docker install
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg-agent \
+    software-properties-common
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+RUN apt-key fingerprint 0EBFCD88
+
+RUN add-apt-repository \
+    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+    $(lsb_release -cs) \
+    stable"
+RUN apt-get update && apt-get install --no-install-recommends -y docker-ce docker-ce-cli containerd.io
+
+RUN apt update -y && apt upgrade -y && apt install curl git jq libicu74 -y
+
 # Also can be "linux-arm", "linux-arm64".
-
-RUN apt update && \
-    apt upgrade -y && \
-    apt install -y curl git jq libicu74
-
-# Install Azure CLI
-RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+ENV TARGETARCH="linux-x64"
 
 WORKDIR /azp/
 
 COPY ./start.sh ./
 RUN chmod +x ./start.sh
 
-# Create agent user and set up home directory
-RUN useradd -m -d /home/agent agent
-RUN chown -R agent:agent /azp /home/agent
+ENV AGENT_ALLOW_RUNASROOT="true"
 
-USER agent
-# Another option is to run the agent as root.
-# ENV AGENT_ALLOW_RUNASROOT="true"
-
-ENTRYPOINT [ "./start.sh" ]
+# # Set start.sh script as ENTRYPOINT.
+ENTRYPOINT ["/azp/start.sh"]
