--- a/azsh-linux-agent/linux-sh-agent-deployment.template.yaml
+++ b/azsh-linux-agent/linux-sh-agent-deployment.template.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: kubepodcreation
-          image: cragentssgvhe4aipy37o.azurecr.io/linux-sh-agent:latest
+          image: __IMAGE_NAME__
           env:
             - name: AZP_URL
               valueFrom:
