--- a/azsh-windows-agent/windows-sh-agent-deployment.template.yaml
+++ b/azsh-windows-agent/windows-sh-agent-deployment.template.yaml
@@ -15,6 +15,13 @@ spec:
       labels:
         app: azsh-windows-agent
     spec:
+      tolerations:
+        - key: "node.kubernetes.io/os"
+          operator: "Equal"
+          value: "windows"
+          effect: "NoSchedule"
+      nodeSelector:
+        "node.kubernetes.io/os": windows
       containers:
         - name: kubepodcreation
           image: __IMAGE_NAME__
