--- a/azsh-windows-agent/windows-sh-agent-deployment.yaml
+++ b/azsh-windows-agent/windows-sh-agent-deployment.yaml
@@ -16,10 +16,10 @@ spec:
         app: azsh-windows-agent
     spec:
       tolerations:
-        - key: node.kubernetes.io/os
-          operator: Equal
-          value: windows
-          effect: NoSchedule
+        - key: "os"
+          operator: "Equal"
+          value: "windows"
+          effect: "NoSchedule"
       nodeSelector:
         kubernetes.io/os: windows
       containers:
