--- a/keda/windows/azure-pipelines-scaledobject.yaml
+++ b/keda/windows/azure-pipelines-scaledobject.yaml
@@ -2,16 +2,16 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: azure-pipelines-scaledobject
-  namespace: az-devops-linux
+  namespace: az-devops-windows
 spec:
   scaleTargetRef:
-    name: azsh-linux #Target agent deployment name
+    name: azsh-windows #Target agent deployment name
   minReplicaCount: 1
   maxReplicaCount: 5 #Maximum number of parallel instances
   triggers:
     - type: azure-pipelines
       metadata:
-        poolID: "12" #Replace with your agent pool ID
+        poolID: "11" #Replace with your agent pool ID
         organizationURLFromEnv: "AZP_URL"
       authenticationRef:
         name: pipeline-trigger-auth
