--- a/helm-charts-v2/az-selfhosted-agents/templates/windows-secret.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/windows-secret.yaml
@@ -6,6 +6,7 @@ data:
 kind: Secret
 metadata:
   name: {{ .Values.secret.name }}
+  namespace: {{ .Values.windowsNamespace }}
   labels:
     {{- include "az-selfhosted-agents.labels" . | nindent 4 }}
 type: Opaque
