fixed helm chart TODO: keda as well

--- a/helm-charts-v2/az-selfhosted-agents/templates/linux-deploy.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/linux-deploy.yaml
@@ -29,17 +29,17 @@ spec:
           - name: AZP_URL
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.secret.name }}
+                name: {{ .Values.secretlinux.name }}
                 key: AZP_URL
           - name: AZP_TOKEN
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.secret.name }}
+                name: {{ .Values.secretlinux.name }}
                 key: AZP_TOKEN
           - name: AZP_POOL
             valueFrom:
               secretKeyRef:
-                name: {{ .Values.secret.name }}
+                name: {{ .Values.secretlinux.name }}
                 key: AZP_POOL
         volumeMounts:
         - mountPath: /var/run/docker.sock
