--- a/helm-charts-v2/az-selfhosted-agents/templates/windows-secret.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/windows-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 data:
-  AZP_POOL: {{ .Values.secret.data.AZP_POOL_VALUE }}
-  AZP_TOKEN: {{ .Values.secret.data.AZP_TOKEN_VALUE }}
-  AZP_URL: {{ .Values.secret.data.AZP_URL_VALUE }}
+  AZP_POOL: {{ .Values.secretwindows.data.AZP_POOL_VALUE }}
+  AZP_TOKEN: {{ .Values.secretwindows.data.AZP_TOKEN_VALUE }}
+  AZP_URL: {{ .Values.secretwindows.data.AZP_URL_VALUE }}
 kind: Secret
 metadata:
-  name: {{ .Values.secret.name }}
+  name: {{ .Values.secretwindows.name }}
   namespace: {{ .Values.windowsNamespace }}
   labels:
     {{- include "az-selfhosted-agents.labels" . | nindent 4 }}
