keda implemented in helm chart

--- a/helm-charts-v2/az-selfhosted-agents/templates/linux-keda-secret.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/linux-keda-secret.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.linux.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: pipeline-auth
-  namespace: __NAMESPACE__
+  namespace: {{ .Values.linuxNamespace }}
 data:
-  personalAccessToken: "__PAT_TOKEN__"
+  personalAccessToken: {{ .Values.secretlinux.data.AZP_TOKEN_VALUE }}
