--- a/helm-charts-v2/az-selfhosted-agents/templates/windows-keda-secret.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/windows-keda-secret.yaml
@@ -1,7 +1,8 @@
+{{- if .Values.windows.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: pipeline-auth
-  namespace: __NAMESPACE__
+  namespace: {{ .Values.windowsNamespace }}
 data:
-  personalAccessToken: "__PAT_TOKEN__"
+  personalAccessToken: {{ .Values.secretwindows.data.AZP_TOKEN_VALUE }}
