--- a/helm-charts-v2/az-selfhosted-agents/templates/linux-azure-pipelines-scaledobject.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/linux-azure-pipelines-scaledobject.yaml
@@ -1,17 +1,18 @@
+{{- if .Values.linux.enabled }}
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: azure-pipelines-scaledobject
-  namespace: __NAMESPACE__
+  namespace: {{ .Values.linuxNamespace }}
 spec:
   scaleTargetRef:
-    name: azsh-windows #Target agent deployment name
-  minReplicaCount: 1
-  maxReplicaCount: 5 #Maximum number of parallel instances
+    name: {{ .Values.linux.deploy.name }} #Target agent deployment name
+  minReplicaCount: {{ .Values.autoscaling.minReplicas }}
+  maxReplicaCount: {{ .Values.autoscaling.maxReplicas }} #Maximum number of parallel instances
   triggers:
     - type: azure-pipelines
       metadata:
-        poolID: "11" #Replace with your agent pool ID
+        poolID: {{ .Values.poolID.linux }} #Replace with your agent pool ID
         organizationURLFromEnv: "AZP_URL"
       authenticationRef:
         name: pipeline-trigger-auth
