--- a/helm-charts-v2/az-selfhosted-agents/templates/linux-trigger-auth.yaml
+++ b/helm-charts-v2/az-selfhosted-agents/templates/linux-trigger-auth.yaml
@@ -1,8 +1,9 @@
+{{- if .Values.linux.enabled }}
 apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
   name: pipeline-trigger-auth
-  namespace: __NAMESPACE__
+  namespace: {{ .Values.linuxNamespace }}
 spec:
   secretTargetRef:
     - parameter: personalAccessToken
