--- a/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
+++ b/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
@@ -14,11 +14,5 @@ steps:
   - task: PowerShell@2
     displayName: "List Agent Pools"
     inputs:
-      targetType: "inline"
-      script: |
-        $uri = "$(System.TeamFoundationCollectionUri)$(System.TeamProject)/_apis/distributedtask/queues?api-version=6.0-preview.1"
-        $headers = @{
-          Authorization = "Basic $(System.AccessToken)"
-        }
-        $response = Invoke-RestMethod -Uri $uri -Method Get -Headers $headers
-        Write-Host "##vso[task.setvariable variable=agentPools]$($response.value | ConvertTo-Json)"
+      filePath: 'infra\scripts\New-KubernetesAgentPool.ps1'
+      pwsh: true
