--- a/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
+++ b/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
@@ -45,7 +45,7 @@ stages:
                 - task: PowerShell@2
                   displayName: "Install Prerequisites"
                   inputs:
-                    targetType: 'inline'
+                    targetType: "inline"
                     script: |
                       # install az cli
                       az config set extension.dynamic_install_allow_preview=true
