--- a/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
+++ b/.azuredevops/pipelines/deploy-agent-pool-on-aks.yaml
@@ -76,3 +76,10 @@ stages:
                     pwsh: true
                   env:
                     AZURE_DEVOPS_EXT_PAT: $(AZURE_DEVOPS_EXT_PAT)
+                - task: HelmDeploy@1
+                  displayName: "helm list"
+                  inputs:
+                    connectionType: 'Kubernetes Service Connection'
+                    kubernetesServiceConnection: '$(kubernetesServiceEndpoint)'
+                    command: 'ls'
+                    arguments: '--all-namespaces'
